--- a/arch/arm64/configs/sdm855-perf_defconfig
+++ b/arch/arm64/configs/sdm855-perf_defconfig
@@ -287,6 +287,10 @@ CONFIG_MMC_TEST=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_MSM=y
+CONFIG_EDAC=y
+CONFIG_EDAC_KRYO_ARM64=y
+CONFIG_EDAC_KRYO_ARM64_PANIC_ON_CE=y
+CONFIG_EDAC_KRYO_ARM64_PANIC_ON_UE=y
 CONFIG_RTC_CLASS=y
 CONFIG_DMADEVICES=y
 CONFIG_UIO=y
@@ -298,6 +302,7 @@ CONFIG_QCOM_SCM=y
 CONFIG_EXTCON=y
 CONFIG_IIO=y
 CONFIG_PWM=y
+CONFIG_RAS=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_EXT2_FS=y
