--- a/arch/arm64/configs/sdm855_defconfig
+++ b/arch/arm64/configs/sdm855_defconfig
@@ -331,6 +331,8 @@ CONFIG_PRINTK_TIME=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_INFO=y
 CONFIG_PAGE_OWNER=y
+CONFIG_DEBUG_SECTION_MISMATCH=y
+# CONFIG_SECTION_MISMATCH_WARN_ONLY is not set
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_PAGE_POISONING=y
 CONFIG_DEBUG_OBJECTS=y
