--- a/arch/arm64/boot/dts/qcom/sdm855-gdsc.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm855-gdsc.dtsi
@@ -244,4 +244,12 @@
 		reg = <0xab008b4 0x4>;
 		status = "disabled";
 	};
+
+	/* GDSCs in NPU CC */
+	npu_core_gdsc: qcom,gdsc@0x9911028 {
+		compatible = "regulator-fixed";
+		regulator-name = "npu_core_gdsc";
+		reg = <0x9911028 0x4>;
+		status = "disabled";
+	};
 };
