--- a/configs/default_defconfig
+++ b/configs/default_defconfig
@@ -26,6 +26,21 @@ ifeq ($(CONFIG_CNSS_QCA6390), y)
 	CONFIG_WMI_DBR_SUPPORT := y
 endif
 
+ifeq ($(CONFIG_CNSS_QCA6490), y)
+	ifeq ($(CONFIG_CNSS_EMULATION), y)
+		CONFIG_QCA_WIFI_NAPIER_EMULATION := y
+	endif
+	CONFIG_LITHIUM := y
+	CONFIG_WLAN_FEATURE_11AX := y
+	CONFIG_WLAN_FEATURE_DFS_OFFLOAD := y
+	ifeq ($(CONFIG_ARCH_SDM845), y)
+		CONFIG_IPA3 := n
+	endif
+	CONFIG_SCALE_INCLUDES := y
+	CONFIG_HASTINGS_BT_WAR := y
+	CONFIG_WDI3_IPA_OVER_GSI :=y
+endif
+
 ifeq ($(CONFIG_CLD_HL_SDIO_CORE), y)
 	CONFIG_QCA_WIFI_SDIO := y
 ifndef CONFIG_SDIO_TRANSFER
@@ -372,6 +387,11 @@ endif
 ifeq ($(CONFIG_CNSS_QCA6390), y)
 	CONFIG_QCA6390_HEADERS_DEF := y
 	CONFIG_QCA_WIFI_QCA6390 := y
+endif
+
+ifeq ($(CONFIG_CNSS_QCA6490), y)
+	CONFIG_QCA6490_HEADERS_DEF := y
+	CONFIG_QCA_WIFI_QCA6490 := y
 endif
 
 ifeq ($(CONFIG_LITHIUM), y)
