--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -250,7 +250,10 @@ ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
 		atoll-qrd-overlay.dtbo\
 		atoll-wcd937x-idp-overlay.dtbo\
 		atoll-usbc-idp-overlay.dtbo\
-		atoll-rumi-overlay.dtbo
+		atoll-rumi-overlay.dtbo\
+		atollp-idp-overlay.dtbo \
+		atollp-atp-overlay.dtbo \
+		atollp-qrd-overlay.dtbo
 
 atoll-idp-overlay.dtbo-base := atoll.dtb
 atoll-atp-overlay.dtbo-base := atoll.dtb
@@ -258,13 +261,19 @@ atoll-qrd-overlay.dtbo-base := atoll.dtb
 atoll-rumi-overlay.dtbo-base := atoll.dtb
 atoll-wcd937x-idp-overlay.dtbo-base := atoll.dtb
 atoll-usbc-idp-overlay.dtbo-base := atoll.dtb
+atollp-idp-overlay.dtbo-base := atollp.dtb
+atollp-atp-overlay.dtbo-base := atollp.dtb
+atollp-qrd-overlay.dtbo-base := atollp.dtb
 else
 dtb-$(CONFIG_ARCH_ATOLL)	+= atoll-idp.dtb\
 	atoll-atp.dtb\
 	atoll-qrd.dtb\
 	atoll-wcd937x-idp.dtb\
 	atoll-usbc-idp.dtb\
-	atoll-rumi.dtb
+	atoll-rumi.dtb\
+	atollp-idp.dtb\
+	atollp-atp.dtb\
+	atollp-qrd.dtb
 endif
 
 dtb-$(CONFIG_ARCH_SDXPRAIRIE) += sdxprairie-rumi.dtb \
