arm: dts: msm: Add triple camera sensor nodes for atoll
Add sensor, actuator, eeprom and flash nodes
for triple camera on atoll.

Change-Id: I5fc1c2d23238acd0e151bb1499a1ac8671ef554b
Signed-off-by: Shravan Nevatia <snevatia@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/atoll-pinctrl.dtsi
+++ b/arch/arm64/boot/dts/qcom/atoll-pinctrl.dtsi
@@ -1318,7 +1318,7 @@
 		cam_sensor_rear2_suspend: cam_sensor_rear2_suspend {
 			/* RESET */
 			mux {
-				pins = "gpioi25";
+				pins = "gpio25";
 				function = "gpio";
 			};
 
