qcacld-3.0: Fix one potential wrong config
CONFIG_WLAN_TX_FLOW_CONTROL_LEGACY may be not set yes, if only
CONFIG_ROME_IF is set pci in external file. Because it is set yes
only when CONFIG_HIF_PCI set yes, however, CONFIG_HIF_PCI set yes
after it. For example, in file default_defconfig, CONFIG_HIF_PCI
set to yes on line 465, however line 311 checking CONFIG_HIF_PCI
to enable CONFIG_WLAN_TX_FLOW_CONTROL_LEGACY. So, line 314 can't
be called, CONFIG_WLAN_TX_FLOW_CONTROL_LEGACY is not set yes.

Change "ifeq ($(CONFIG_HIF_PCI), y)" to "ifeq ($(CONFIG_ROME_IF),pci)"
to avoid it.

Change-Id: Id324cdb99d6ee2d20bc00e698836c3ea4c5e0a05
CRs-Fixed: 2496110

--- a/configs/qca6174_defconfig
+++ b/configs/qca6174_defconfig
@@ -229,7 +229,7 @@ else
 CONFIG_LL_DP_SUPPORT := y
 endif
 
-ifeq ($(CONFIG_HIF_PCI), y)
+ifeq ($(CONFIG_ROME_IF),pci)
 ifneq ($(CONFIG_WLAN_TX_FLOW_CONTROL_V2), y)
 ifneq ($(CONFIG_LITHIUM), y)
 CONFIG_WLAN_TX_FLOW_CONTROL_LEGACY := y
