ARM: dts: msm: add demux node for 4.14 devicetree
Add demux device tree node to support ISDB-T on kernel 4.14 for atoll.

Change-Id: Ib89e98594d0cc7a72cc3225e3e09447bf98a4f8d
Signed-off-by: Murthy Nidadavolu <mnssr@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/atoll.dtsi
+++ b/arch/arm64/boot/dts/qcom/atoll.dtsi
@@ -3392,6 +3392,10 @@
 		qcom,src-dst-ports = <26 512>;
 		operating-points-v2 = <&gpu_bw_tbl>;
 	};
+
+	qcom,demux {
+		compatible = "qcom,demux";
+	};
 };
 
 #include "atoll-gdsc.dtsi"
