ARM: dts: msm: add remote debugger support on atoll
Add remote debugger device configuration. The Remote Debugger driver
allows a debugger running on a host PC to communicate with a remote
stub running on peripheral subsystems.

Change-Id: I80ed9f7fb9d1d38b7c6a8eae9f8af9fb71a28fba
Acked-by: Devender Kaushik <dkaushik@qti.qualcomm.com>
Signed-off-by: Mohammed Nayeem Ur Rahman <mohara@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/atoll.dtsi
+++ b/arch/arm64/boot/dts/qcom/atoll.dtsi
@@ -3760,6 +3760,7 @@
 #include "atoll-camera.dtsi"
 #include "atoll-sde-pll.dtsi"
 #include "atoll-sde.dtsi"
+#include "msm-rdbg.dtsi"
 
 &qupv3_se9_i2c {
 	status = "ok";
