ARM: dts: msm: Add mst encoder property for atoll target
Add mst encoder property for atoll target to correctly
provide count to mdp driver for initializing the encoders
for mst dp.

Change-Id: Ia839c9f2b2e978fc05040df54c2f9cf0ab631328
Signed-off-by: RAJAT GUPTA <rajatgu@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/atoll-sde.dtsi
+++ b/arch/arm64/boot/dts/qcom/atoll-sde.dtsi
@@ -514,6 +514,7 @@
 		qcom,max-pclk-frequency-khz = <675000>;
 		qcom,max-hdisplay = <2560>;
 		qcom,max-vdisplay = <1440>;
+		qcom,no-mst-encoder;
 
 	clocks =	<&clock_dispcc DISP_CC_MDSS_DP_AUX_CLK>,
 			<&clock_gcc GCC_USB3_PRIM_PHY_PIPE_CLK>,
