usb: config: Fix incorrect use of keywords
Use 'QTI' string in config names to fix incorrect usage.
Also fix the diag bridge config string for sdmsteppe.

Change-Id: I3af8a34653b8d67eb1263e9d5d162688ff381898
Signed-off-by: Ajay Agarwal <ajaya@codeaurora.org>

--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -624,7 +624,7 @@ config USB_CONFIGFS_F_IPC
 config USB_CONFIGFS_F_MDM_DATA
 	bool "USB QTI Modem Data function"
 	select USB_F_MDM_DATA
-	depends on USB_CONFIGFS && USB_QCOM_MDM_DATA_BRIDGE
+	depends on USB_CONFIGFS && USB_QTI_MDM_DATA_BRIDGE
 	help
 	  USB QTI modem data function driver.
 
