--- a/drivers/usb/misc/Kconfig
+++ b/drivers/usb/misc/Kconfig
@@ -288,7 +288,7 @@ config USB_TYPEC_MUX_NXP5150A
 	  Say Y here if you want to use NXP CC Logic Type-C Chipset NXP5150A
 	  for CC detection and Mux control.
 
-config USB_QCOM_DIAG_BRIDGE
+config USB_QTI_DIAG_BRIDGE
 	tristate "USB QTI diagnostic bridge driver"
 	depends on USB
 	help
@@ -299,7 +299,7 @@ config USB_QCOM_DIAG_BRIDGE
 	  To compile this driver as a module, choose M here: the
 	  module will be called diag_bridge.  If unsure, choose N.
 
-config USB_QCOM_MDM_DATA_BRIDGE
+config USB_QTI_MDM_DATA_BRIDGE
 	tristate "USB QTI modem data bridge driver"
 	select USB_CONFIGFS_F_MDM_DATA
 	depends on USB
@@ -310,7 +310,7 @@ config USB_QCOM_MDM_DATA_BRIDGE
 	  To compile this driver as a module, choose M here: the module
 	  will be called mdm_data_bridge. If unsure, choose N.
 
-config USB_QCOM_KS_BRIDGE
+config USB_QTI_KS_BRIDGE
 	tristate "USB QTI kick start bridge driver"
 	depends on USB
 	help
