--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -895,6 +895,15 @@ config QCOM_AOP_DDRSS_COMMANDS
 	help
 	  This driver allows messages to be sent to the AOP to affect the DDRSS
 	  behavior.
+
+config QCOM_ADSP_MANUAL_VOTE
+	bool "Send commands to ADSP to unvote and vote during Suspend and resume"
+	help
+	  This driver is used to manually release and acquire the ADSP vote from APPS
+	  processor during system suspend and resume.
+	  This driver sends message over QMI to the service which is running on
+	  ADSP.
+
 endmenu
 
 config QCOM_HYP_CORE_CTL
