ARM: dts: msm: Add minidump id for Cdsp on atoll
Add minidump id to enable minidump collection in ELF32 format
for Cdsp on atoll SoC.

Change-Id: I9d22a417c83fd0a77e60d476e1c45da1e5c9ddcd
Signed-off-by: Mayank Grover <groverm@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/atoll.dtsi
+++ b/arch/arm64/boot/dts/qcom/atoll.dtsi
@@ -1227,12 +1227,14 @@
 		qcom,pas-id = <18>;
 		qcom,proxy-timeout-ms = <10000>;
 		qcom,smem-id = <601>;
+		qcom,minidump-id = <7>;
 		qcom,sysmon-id = <7>;
 		qcom,ssctl-instance-id = <0x17>;
 		qcom,firmware-name = "cdsp";
 		memory-region = <&pil_cdsp_mem>;
 		qcom,signal-aop;
 		qcom,complete-ramdump;
+		qcom,minidump-as-elf32;
 
 		/* Inputs from turing */
 		interrupts-extended = <&pdc GIC_SPI 578 IRQ_TYPE_EDGE_RISING>,
