--- a/arch/arm64/boot/dts/qcom/sdxprairie-mtp-le-cpe.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdxprairie-mtp-le-cpe.dtsi
@@ -52,3 +52,27 @@
 &vbus_detect {
 	status = "ok";
 };
+
+&cnss_qca6390 {
+	status = "disabled";
+};
+
+&ipa_hw {
+	qcom,use-ipa-in-mhi-mode;
+};
+
+&pcie0 {
+	status = "disabled";
+};
+
+&pcie_ep {
+	status = "ok";
+};
+
+&mhi_device {
+	status = "ok";
+};
+
+&mhi_net_device {
+	status = "ok";
+};
