--- a/arch/arm64/boot/dts/qcom/sm8150-pinctrl.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150-pinctrl.dtsi
@@ -778,6 +778,36 @@
 			};
 		};
 
+		ss5_pwr_ctrl_pins: ss5_pwr_ctrl_pins {
+			ss5_pwr_ctrl_rst_on: ss5_pwr_ctrl_rst_on {
+				mux {
+					pins = "gpio11", "gpio39";
+					function = "gpio";
+				};
+
+				config {
+					pins = "gpio11", "gpio39";
+					drive-strength = <16>; /* 16 mA */
+					bias-pull-up;
+					output-high;
+				};
+			};
+
+			ss5_pwr_ctrl_rst_off: ss5_pwr_ctrl_off {
+				mux {
+					pins = "gpio11", "gpio39";
+					function = "gpio";
+				};
+
+				config {
+					pins = "gpio11", "gpio39";
+					drive-strength = <16>; /* 16 mA */
+					bias-pull-up;
+					output-high;
+				};
+			};
+		};
+
 		/* SE 4 pin mappings */
 		qupv3_se4_i2c_pins: qupv3_se4_i2c_pins {
 			qupv3_se4_i2c_active: qupv3_se4_i2c_active {
@@ -834,6 +864,34 @@
 					pins = "gpio51", "gpio52", "gpio53",
 								"gpio54";
 					drive-strength = <6>;
+					bias-disable;
+				};
+			};
+		};
+
+		qupv3_se4_2uart_pins: qupv3_se4_2uart_pins {
+			qupv3_se4_2uart_active: qupv3_se4_2uart_active {
+				mux {
+					pins = "gpio41", "gpio42";
+					function = "qup9";
+				};
+
+				config {
+					pins = "gpio41", "gpio42";
+					drive-strength = <16>;
+					bias-disable;
+				};
+			};
+
+			qupv3_se4_2uart_sleep: qupv3_se4_2uart_sleep {
+				mux {
+					pins = "gpio41", "gpio42";
+					function = "gpio";
+				};
+
+				config {
+					pins = "gpio41", "gpio42";
+					drive-strength = <16>;
 					bias-disable;
 				};
 			};
