--- a/arch/arm64/boot/dts/qcom/atoll-qrd.dtsi
+++ b/arch/arm64/boot/dts/qcom/atoll-qrd.dtsi
@@ -127,6 +127,7 @@
 	qcom,charger-temp-max = <800>;
 	qcom,smb-temp-max = <800>;
 	qcom,disable-sw-thermal-regulation;
+	qcom,disable-fcc-restriction;
 };
 
 &usb0 {
