qcacld-3.0: Disable DBR feature on sdxprairie
DBR feature not required on SDX platform, and disable it.

Change-Id: Ic4e4029a58a2c1658f6192d31412b213272d023c
CRs-Fixed: 2505676

--- a/configs/default_defconfig
+++ b/configs/default_defconfig
@@ -878,6 +878,9 @@ ifeq ($(CONFIG_ARCH_SDXPRAIRIE), y)
 	ifneq ($(CONFIG_SLUB_DEBUG), y)
 		CONFIG_DP_TRACE := n
 	endif
+
+	CONFIG_DIRECT_BUF_RX_ENABLE := n
+	CONFIG_WMI_DBR_SUPPORT := n
 endif
 
 ifneq ($(CONFIG_HIF_USB), y)
