ARM: dts: msm: Disable npudsp_npu_ddr_bw for atoll
This change is to disable npudsp ddr bw for the atoll platform.

Change-Id: I35c37dfaaf3a7c8112d713739f6004c51a8ebda1
Signed-off-by: Da Hoon Pyun <dpyun@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/atoll.dtsi
+++ b/arch/arm64/boot/dts/qcom/atoll.dtsi
@@ -3319,7 +3319,7 @@
 		governor = "performance";
 		qcom,src-dst-ports = <MSM_BUS_MASTER_NPU MSM_BUS_SLAVE_EBI_CH0>;
 		operating-points-v2 = <&suspendable_ddr_bw_opp_table>;
-		status = "ok";
+		status = "disabled";
 	};
 
 	npudsp_npu_ddr_bwmon: qcom,npudsp-npu-ddr-bwmon@70300 {
@@ -3337,7 +3337,7 @@
 		qcom,hw-timer-hz = <19200000>;
 		qcom,target-dev = <&npudsp_npu_ddr_bw>;
 		qcom,count-unit = <0x10000>;
-		status = "ok";
+		status = "disabled";
 	};
 
 	keepalive_opp_table: keepalive-opp-table {
