ARM: dts: msm: Enable MPM Timer support for Gen3 VMs
Enable MPM Timer support for KPI on Gen3 VMs.

Change-Id: Ie12750a3c2eb1e944c35cc89f75e2b9691e4471a
Signed-off-by: vagdhan kumar kanukurthi <vagdhank@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/quin-vm-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/quin-vm-common.dtsi
@@ -270,4 +270,10 @@
 		interrupts = <GIC_SPI 43 IRQ_TYPE_NONE>;
 		status = "okay";
 	};
+
+	qcom,mpm2-sleep-counter@0xc221000 {
+		compatible = "qcom,mpm2-sleep-counter";
+		reg = <0xc221000 0x1000>;
+		clock-frequency = <32768>;
+	};
 };
