ARM: dts: msm: Enable ASM330, SMI130 & IAM20680 sensor for sa515m-ccard
Enable ASM330, SMI130 & IAM20680 accelerometer and gyroscope sensor for
sa515m-ccard devices.

Change-Id: I89a8f94c5c4425e604ffef1b5e208edfdba5e6c2
Signed-off-by: Puneet Yatnal <puneet@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/sdxprairie-pinctrl.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdxprairie-pinctrl.dtsi
@@ -1593,6 +1593,31 @@
 				};
 			};
 		};
+		sensor_int1_default: sensor_int1_default {
+			     mux {
+				     pins = "gpio84";
+				     function = "gpio";
+			     };
+
+			     config {
+				     pins = "gpio84";
+				     drive-strength = <16>; /* 16 mA */
+				     bias-pull-down; /* pull down */
+			     };
+		     };
+
+		sensor_int2_default: sensor_int2_default {
+			     mux {
+				     pins = "gpio85";
+				     function = "gpio";
+			     };
+
+			     config {
+				     pins = "gpio85";
+				     drive-strength = <16>; /* 16 mA */
+				     bias-pull-down; /* pull down */
+			     };
+		     };
 
 		pinctrl_pps: ppsgrp {
 			mux {
