--- a/arch/arm64/boot/dts/qcom/sdxprairie-v2-pcie-ep-mtp.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdxprairie-v2-pcie-ep-mtp.dtsi
@@ -20,3 +20,27 @@
 &restart_pshold {
 	qcom,force-warm-reboot;
 };
+
+&pcie0 {
+	status = "disabled";
+};
+
+&cnss_qca6390 {
+	status = "disabled";
+};
+
+&ipa_hw {
+	qcom,use-ipa-in-mhi-mode;
+};
+
+&pcie_ep {
+	status = "ok";
+};
+
+&mhi_device {
+	status = "ok";
+};
+
+&mhi_net_device {
+	status = "ok";
+};
