--- a/arch/arm64/boot/dts/qcom/sa6155.dtsi
+++ b/arch/arm64/boot/dts/qcom/sa6155.dtsi
@@ -87,6 +87,11 @@
 	vdd_mx-supply = <&VDD_CX_LEVEL>;
 };
 
+&sdhc_1 {
+	qcom,restore-after-cx-collapse;
+	status = "ok";
+};
+
 #include "sa6155-pcie.dtsi"
 
 &soc {
