--- a/configs/genoa.usb.perf_defconfig
+++ b/configs/genoa.usb.perf_defconfig
@@ -67,4 +67,5 @@ CONFIG_QCN7605_SUPPORT := y
 CONFIG_TGT_NUM_MSDU_DESC := 0
 # For OOB wakeup
 CONFIG_WLAN_FEATURE_WOW_PULSE := y
+CONFIG_HTC_MAX_MSG_PER_BUNDLE_TX := 48
 ###################################
