qcacld-3.0: Update defconfig for qca6174
The functions hdd_sysfs_create_adapter_root_obj() and
hdd_sysfs_destroy_adapter_root_obj() are declared but not
implemented if CONFIG_WLAN_SYSFS is not defined but
CONFIG_FEATURE_BECN_STATS is defined. Do not enable
CONFIG_FEATURE_BECN_STATS if CONFIG_WLAN_SYSFS is not defined.

Change-Id: Iccf0ea4519416266e43533cfd34c9a3085820bee
CRs-Fixed: 2549288

--- a/configs/qca6174_defconfig
+++ b/configs/qca6174_defconfig
@@ -709,7 +709,9 @@ endif
 CONFIG_SM_ENG_HIST := n
 
 #Enable Beacon Reception Stats
+ifeq ($(CONFIG_WLAN_SYSFS), y)
 CONFIG_FEATURE_BECN_STATS := y
+endif
 
 ifeq (y,$(findstring y,$(CONFIG_ARCH_MSM) $(CONFIG_ARCH_QCOM)))
 CONFIG_WLAN_FEATURE_DP_BUS_BANDWIDTH := y
