--- a/configs/default_defconfig
+++ b/configs/default_defconfig
@@ -854,6 +854,7 @@ ifeq ($(CONFIG_LITHIUM), y)
 	CONFIG_WLAN_DP_PER_RING_TYPE_CONFIG := y
 	#Enable WMI TX/RX over QMI
 	CONFIG_WMI_SEND_RECV_QMI := y
+	CONFIG_WLAN_DP_PENDING_MEM_FLUSH := y
 endif
 
 #Flag to enable hdd memory dump feature
