qcacld-3.0: Enable LFR3 just for Helium and HST
Enable LFR3 just for Helium and HST,  Rome still use LFR2

Change-Id: Iee0d11898ba18246386496df626f8cbbeb05fe1e
CRs-Fixed: 2543516

--- a/configs/default_defconfig
+++ b/configs/default_defconfig
@@ -114,7 +114,7 @@ endif
 CONFIG_WLAN_FEATURE_MBSSID := y
 
 #Flag to enable Legacy Fast Roaming3(LFR3)
-ifneq ($(CONFIG_ARCH_SDX20), y)
+ifeq (y,$(findstring y,$(CONFIG_HELIUMPLUS) $(CONFIG_LITHIUM)))
 	CONFIG_QCACLD_WLAN_LFR3 := y
 else
 	CONFIG_QCACLD_WLAN_LFR2 := y
