--- a/configs/default_defconfig
+++ b/configs/default_defconfig
@@ -179,6 +179,10 @@ ifeq ($(CONFIG_ARCH_SM6150), y)
 CONFIG_QCACLD_FEATURE_METERING := y
 endif
 
+ifeq ($(CONFIG_ARCH_LITO), y)
+CONFIG_QCACLD_FEATURE_METERING := y
+endif
+
 #Flag to enable Fast Transition (11r) feature
 CONFIG_QCOM_VOWIFI_11R := y
 
