--- a/configs/default_defconfig
+++ b/configs/default_defconfig
@@ -878,6 +878,7 @@ ifeq ($(CONFIG_LITHIUM), y)
 	ifeq ($(CONFIG_SLUB_DEBUG_ON), y)
 		CONFIG_WLAN_FEATURE_DP_EVENT_HISTORY := y
 		CONFIG_HIF_CE_DEBUG_DATA_BUF := y
+		CONFIG_WLAN_RECORD_RX_PADDR := y
 	endif
 	CONFIG_WLAN_DP_PER_RING_TYPE_CONFIG := y
 	#Enable WMI TX/RX over QMI
